# openclaw-guard

./: .env.example  .gitattributes  .gitignore  README.md  architecture_discussion_log.md  ec2_bootstrap.sh  ec2_ubuntu_start.sh  gateway.yaml  guard.sh  guard_start.sh  guard_stop.sh  implementation_plan.md  install_blueprint_ec2.sh  install_blueprint_mac.sh  install_blueprint_wsl.sh  install_mcp_bridge.sh  network_architecture.md  pyproject.toml  requirement.txt  setup_env.sh  start.sh  start_prompt.txt  verification_checklist.md  walkthrough.md  wsl_start.sh
.claude/: settings.local.json
guard/: __init__.py  __main__.py  blueprint_io.py  bridge_state.py  cli.py  gateway.py  gateway_config.py  install_proxy.py  network_capture.py  network_monitor.py  onboard.py  sandbox_policy.py  wizard.py
nemoclaw-blueprint/: blueprint.yaml
src/: cli.py  gateway.py  onboard.py  requirements.txt  setup.py
src/logs/: mitmdump.out  security_audit.db
tests/: test_bridge_cli.py  test_cli_mcp.py  test_gateway.py  test_gateway_config.py  test_install_proxy.py  test_mcp_github_e2e.sh  test_mcp_proxy.py  test_network_monitor.py  test_sandbox_policy.py
tools/: migrate_blueprint_to_gateway.py
